Fixed issues with css positoning and various other css layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-.main-container {
-  /* position: relative; */
-  height: 100vh;
+.page-container {
+  height: 100%;
+  min-height: 100vh;
+  position: relative;
+}
+
+.content {
+  padding-bottom: 3em;
 }
 
 .title-container {
