--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,11 @@
 footer {
   text-align: center;
+  height: 3em;
   background: linear-gradient(green, rgb(21, 82, 44));
   color: #ffffff;
   padding: 1em 2em 1em 2em;
   font-family: sans-serif;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
 }
