--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 80vh;
   background-image: url('/public/resources/IMG_0404.jpg');
   background-repeat: no-repeat;
   background-position: 0 45%;
