--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500&display=swap');
 
 * {
-  margin: 0;
+  margin: 0 ; 
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
 }
 
 a {
